<resources>
    <string name="app_name">Shtatus</string>

    <string name="hint_enter_url">Enter URL</string>
    <string name="hint_enter_name">Enter name</string>

    <string name="url">URL</string>
    <string name="name">Name</string>

    <string name="default_url">http://</string>

    <string name="error_empty_name">Name should not be empty</string>
    <string name="error_empty_url">URL should not be empty</string>
    <string name="error_invalid_url">URL is not valid</string>
    <string name="error_null_activity">Activity cannot be null</string>
    <string name="error_empty_connection_id">ConnectionId cannot be null</string>

    <string name="title_delete_connection">Delete this connection?</string>
    <string name="title_add_connection">Add connection</string>
    <string name="title_edit_connection">Edit connection</string>

    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_settings">Settings</string>
    <string name="button_apply">Apply</string>
    <string name="status_no_matches">No matches!</string>
    <string name="status_no_connections">Add some connections already!</string>
    <string name="error_no_such_status">\"No such status \"</string>
    <string name="enable_https">Enable HTTPS</string>
    <string name="timeout">Request timeout (ms)</string>
    <string name="status">Status</string>
</resources>
